--- a/src/com/gui/login/loginForm.form
+++ b/src/com/gui/login/loginForm.form
@@ -30,7 +30,7 @@
                   <Group type="103" alignment="1" groupAlignment="0" max="-2" attributes="0">
                       <Group type="102" attributes="0">
                           <Component id="signupButton" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace pref="94" max="32767" attributes="0"/>
                           <Component id="loginButton" min="-2" pref="73" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
@@ -38,15 +38,10 @@
                               <Component id="password" min="-2" max="-2" attributes="0"/>
                               <Component id="username" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="usernameField" min="-2" pref="180" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="passwordField" min="-2" pref="180" max="-2" attributes="0"/>
-                              </Group>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="usernameField" pref="180" max="32767" attributes="0"/>
+                              <Component id="passwordField" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -101,11 +96,6 @@
     </Component>
     <Component class="javax.swing.JTextField" name="usernameField">
     </Component>
-    <Component class="javax.swing.JTextField" name="passwordField">
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="passwordFieldActionPerformed"/>
-      </Events>
-    </Component>
     <Component class="javax.swing.JButton" name="signupButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Sign-up"/>
@@ -115,6 +105,8 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Login"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JPasswordField" name="passwordField">
     </Component>
   </SubComponents>
 </Form>
