--- a/src/com/gui/signup/signupForm.form
+++ b/src/com/gui/signup/signupForm.form
@@ -44,15 +44,13 @@
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="noHpField" min="-2" pref="170" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="usernameField" pref="170" max="32767" attributes="0"/>
-                                      <Component id="lnameField" max="32767" attributes="0"/>
-                                      <Component id="fnameField" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="passwordField" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="emailField" alignment="0" max="32767" attributes="0"/>
-                                  </Group>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="noHpField" pref="170" max="32767" attributes="0"/>
+                                  <Component id="usernameField" pref="170" max="32767" attributes="0"/>
+                                  <Component id="lnameField" max="32767" attributes="0"/>
+                                  <Component id="fnameField" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="emailField" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="passwordField" alignment="0" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -152,8 +150,6 @@
     </Component>
     <Component class="javax.swing.JTextField" name="usernameField">
     </Component>
-    <Component class="javax.swing.JTextField" name="passwordField">
-    </Component>
     <Component class="javax.swing.JTextField" name="emailField">
     </Component>
     <Component class="javax.swing.JTextField" name="noHpField">
@@ -173,6 +169,11 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Reset"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JPasswordField" name="passwordField">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="passwordFieldActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
