--- a/src/com/gui/home/homeForm.form
+++ b/src/com/gui/home/homeForm.form
@@ -77,6 +77,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Servis"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="servisButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="dataButton">
       <Properties>
